Refactor code structure for improved readability and maintainability

--- a/index.html
+++ b/index.html
@@ -1,14 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Personal Homepage</title>
+    <title>Chimamkpam Nnaji | WDD 130</title>
 </head>
-<body>
-    <h1>Welcome to WDD 130.</h1>
-    <p>This page will become your homepage for the course. You will remove this text and replace it with your own personal details.</p>
 
-    <img src="images/salt-lake-temple.jpg" alt="The Salt Lake Temple.">
+<body>
+    <header>
+        <nav>
+            <a href="#">Home</a>
+            <a href="wwr/">Rafting Website</a>
+        </nav>
+    </header>
+    <main>
+        <h1>Chimamkpam Nnaji | WDD 130</h1>
+        <img src="images/IMG_20240316_144925.jpg" alt="Hello, my name is Chima Nnaji" width="200">
+        <p>Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love writing codes and
+            playing soccer ⚽.
+            <br> I am currently studying Web Design and Development at BYU Pathway. My favorite
+            snack is taco 🌮
+        </p>
+    </main>
+    <footer>
+        <p>©2026 🌴 Chima Nnaji 🌴 Enugu, Nigeria</p>
+    </footer>
 </body>
+
 </html>
