renamed the profile image path to profile.jpg

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     </header>
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
-        <img src="images/IMG_20240316_144925.jpg" alt="Hello, my name is Chima Nnaji" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
         <p>Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love writing codes and
             playing soccer ⚽.
             <br> I am currently studying Web Design and Development at BYU Pathway. My favorite
