Made minor improvements and changes.

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Chimamkpam Nnaji | WDD 130</title>
-    <link rel="stylesheet" href="styles/styles.css">
-    <meta name="description" content="This is Chima Nnaji's WDD 130 homepage project.">
-    <meta name="author" content="Chimamkpam Nnaji">
+    <link rel="stylesheet" href="styles/styles.css" />
+    <meta name="description"
+      content="This is my WDD 130 homepage project. It contains details and information about me. Still on development though..." />
+    <meta name="author" content="Chimamkpam Nnaji" />
 </head>
 
 <body>
@@ -19,26 +20,27 @@
     </header>
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
-        <p>Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love writing codes and
-            playing soccer ⚽. I am currently studying Web Design and Development at BYU Pathway.
-            My favorite snack is taco 🌮.
+        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200" />
+        <p>
+            Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love
+            writing codes and playing soccer ⚽. I am currently studying Web Design
+            and Development at BYU Pathway. My favorite snack is taco 🌮.
         </p>
     </main>
     <aside>
         <h2>Enugu</h2>
-        <img src="images/enugu.jpg" alt="Enugu landscape">
-        <p>Enugu is a state in eastern Nigeria. It is bordered by Kogi and Benue to the North,
-            Abia and Imo to the south, Ebonyi to the east and Anambra to the west.
-            The state is a center of innovation, technology, education, business, and tourist
-            attraction/entertainment. Enugu is known for it's historic coal mining, thus, the
-            nickname 'Coal City.' It is also known as the capital state of the Igbo nation
-            (a prestigious and one of the most largest ethnicity in Africa), who are majorly
-            christians.
-            Enugu city, the state capital is a bustling city with lots of greenery to give the
-            residents
-            a sense of closeness to nature and modern infrastructure to give the thrill of city
-            life.
+        <img src="images/enugu.jpg" alt="Enugu landscape" />
+        <p>
+            Enugu is a state in eastern Nigeria. It is bordered by Kogi and Benue to
+            the North, Abia and Imo to the south, Ebonyi to the east and Anambra to
+            the west. The state is a center of innovation, technology, education,
+            business, and tourist attraction/entertainment. Enugu is known for it's
+            historic coal mining, thus, the nickname 'Coal City.' It is also known
+            as the capital state of the Igbo nation (a prestigious and one of the
+            most largest ethnicity in Africa), who are majorly christians. Enugu
+            city, the state capital is a bustling city with lots of greenery to give
+            the residents a sense of closeness to nature and modern infrastructure
+            to give the thrill of city life.
         </p>
     </aside>
     <footer>
