--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chimamkpam Nnaji | WDD 130</title>
     <link rel="stylesheet" href="styles/styles.css" />
     <meta name="description"
-      content="This is my WDD 130 homepage project. It contains details and information about me. Still on development though..." />
-    <meta name="author" content="Chimamkpam Nnaji" />
+      content="This is my WDD 130 homepage project. It contains details and information about me. Still on development though...">
+    <meta name="author" content="Chimamkpam Nnaji">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200" />
+        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
         <p>
             Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love
             writing codes and playing soccer ⚽. I am currently studying Web Design
@@ -29,7 +29,7 @@
     </main>
     <aside>
         <h2>Enugu</h2>
-        <img src="images/enugu.jpg" alt="Enugu landscape" />
+        <img src="images/enugu.jpg" alt="Enugu landscape">
         <p>
             Enugu is a state in eastern Nigeria. It is bordered by Kogi and Benue to
             the North, Abia and Imo to the south, Ebonyi to the east and Anambra to
