--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chimamkpam Nnaji | WDD 130</title>
-    <link rel="stylesheet" href="styles/styles.css" />
+    <link rel="stylesheet" href="styles/styles.css">
     <meta name="description"
       content="This is my WDD 130 homepage project. It contains details and information about me. Still on development though...">
     <meta name="author" content="Chimamkpam Nnaji">
