feat: Enhance personal webpage with social links and updated content

--- a/index.html
+++ b/index.html
@@ -16,18 +16,31 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="https://www.linkedin.com/in/chimamkpam-nnaji-1621523a3">LinkedIn</a>
+            <a href="https://www.facebook.com/heisChima1">Facebook</a>
         </nav>
     </header>
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
         <p>
-            Hello! My name is Chima Nnaji and I am from Enugu, Nigeria. I love
-            writing codes and playing soccer ⚽. I am currently studying Web Design
-            and Development at BYU Pathway. My favorite snack is taco 🌮.
+            Hello! My name is Chima Nnaji and I am from Enugu, Nigeria.<br> I love
+            writing codes and playing soccer. I am currently studying Web Design
+            and Development at BYU Pathway. My favorite snack is taco. I also love making music
+            with my guitar. I have three close friends and every weekend we meet and hangout. This
+            weekend, we went to the calabar annual street carnival. It is the biggest street
+            carnival in West Africa.
         </p>
+        <ul class="box indent">
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/aba-nigeria-temple?lang=eng"
+                  target="_blank">Aba Nigeria Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/adelaide-australia-temple?lang=eng"
+                  target="_blank">Adelaide Australia Temple</a></li>
+            <li><a href="https://www.churchofjesuschrist.org/temples/details/hartford-connecticut-temple?lang=eng"
+                  target="_blank">Hartford Connecticut Temple</a></li>
+        </ul>
     </main>
-    <aside>
+    <aside class="box">
         <h2>Enugu</h2>
         <img src="images/enugu.jpg" alt="Enugu landscape">
         <p>
