--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chimamkpam Nnaji | WDD 130</title>
+    <title>WDD 130 | Chimamkpam Nnaji</title>
     <link rel="stylesheet" href="styles/styles.css">
     <meta name="description"
-      content="This is my WDD 130 homepage project. It contains details and information about me. Still on development though...">
+      content="Chimamkpam Nnaji's WDD 130 homepage featuring information about my interests in web development, soccer, music, and my hometown Enugu, Nigeria">
     <meta name="author" content="Chimamkpam Nnaji">
 </head>
 
