--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <h1>Chimamkpam Nnaji | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
         <p>
-            Hello! My name is Chima Nnaji and I am from Enugu, Nigeria.<br> I love
+            Hello! My name is Chimamkpam Nnaji and I am from Enugu, Nigeria.<br> I love
             writing codes and playing soccer. I am currently studying Web Design
             and Development at BYU Pathway. My favorite snack is taco. I also love making music
             with my guitar. I have three close friends and every weekend we meet and hangout. This
