--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Chimamkpam Nnaji</title>
-    <link rel="stylesheet" href="styles/styles.css">
+    <title>Chimamkpam Nnaji | WDD 130</title>
     <meta name="description"
-      content="Chimamkpam Nnaji's WDD 130 homepage featuring information about my interests in web development, soccer, music, and my hometown Enugu, Nigeria">
+      content="Chimamkpam Nnaji's BYU-Idaho WDD 130 homepage featuring information about my interests in, soccer, music, and my hometown Enugu, Nigeria">
     <meta name="author" content="Chimamkpam Nnaji">
+    <link rel="stylesheet" href="styles/styles.css">
 </head>
 
 <body>
@@ -20,7 +20,7 @@
     </header>
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
-        <img src="images/profile.jpg" alt="Hello, my name is Chima Nnaji" width="200">
+        <img src="images/profile.jpg" alt="Hello, my name is Chimamkpam Nnaji" width="200">
         <p>
             Hello! My name is Chimamkpam Nnaji and I am from Enugu, Nigeria.<br> I love
             writing codes and playing soccer. I am currently studying Web Design
