--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chimamkpam Nnaji | WDD 130</title>
     <meta name="description"
-      content="Chimamkpam Nnaji's BYU-Idaho WDD 130 homepage featuring information about my interests in, soccer, music, and my hometown Enugu, Nigeria">
-    <meta name="author" content="Chimamkpam Nnaji">
+      content="Chimamkpam Nnaji's BYU-Idaho WDD 130 homepage">
+    <meta name="author" content="Chimamkpam Favour Nnaji">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
