--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Chimamkpam Favour Nnaji | WDD 130</title>
+    <title>WDD 130 | Chimamkpam Favour Nnaji</title>
     <meta name="description"
       content="Chimamkpam Nnaji's BYU-Idaho WDD 130 homepage">
     <meta name="author" content="Chimamkpam Favour Nnaji">
