--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WDD 130 | Chimamkpam Favour Nnaji</title>
+    <title>Chimamkpam Nnaji | WDD 130</title>
     <meta name="description"
       content="Chimamkpam Nnaji's BYU-Idaho WDD 130 homepage">
-    <meta name="author" content="Chimamkpam Favour Nnaji">
+    <meta name="author" content="Chimamkpam Nnaji">
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 
