Refactor code structure for improved readability and maintainability

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Open Waters</title>
+    <title>About Us - Open Waters</title>
     <meta name="description"
       content="Experience the thrill of rafting in Nigeria! Join us for an unforgettable adventure on water. Book now!">
     <meta name="author" content="Chimamkpam Nnaji">
@@ -28,9 +28,10 @@
 
     <main>
         <div class="hero">
-            <img src="images/rafting16_1024 (1).jpg" alt="Adventure seekers on the flow.">
+            <img src="images/rafting16-1024-1.jpg" alt="Adventure seekers on the flow.">
             <h1>OPEN WATERS</h1>
             <article>
+                <h2 class="visually-hidden">Experience Open Waters rafting</h2>
                 <img src="images/rafting4_600.jpg" alt="Our client enjoying the adventure.">
                 <p>Ready to conquer wild waters? At Open Waters, we craft unforgettable rafting
                     adventures that thrill, excite, and connect you with nature, while our trained
