--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Open Waters</title>
     <meta name="description"
-      content="Learn about Open Waters, Nigeria's premier rafting company since 2010. Discover our commitment to thrilling adventures, experienced guides, and safety on wild waters.">
+      content="Learn about Open Waters, Nigeria's rafting company since 2010. Discover our devotion to thrilling adventures, skilled guides, and safety on wild waters.">
     <meta name="author" content="Chimamkpam Nnaji">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
