Add initial CSS styles for layout and design
- Define root variables for colors, fonts, and shadows
- Set global styles for margins, paddings, and box-sizing
- Style header, main, and footer sections with grid layout
- Implement styles for navigation links, hero section, and articles
- Create responsive grid layouts for adventures and employees sections
- Add form styles for inputs, textareas, and buttons
- Ensure accessibility with visually hidden class

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
         <nav>
             <a href="#">Home</a>
             <a href="wwr/">Rafting Website</a>
+            <a href="linkendin.com">LinkedIn</a>
+            <a href="facebook.com">Facebook</a>
         </nav>
     </header>
+    <div class="grid">
     <main>
         <h1>Chimamkpam Nnaji | WDD 130</h1>
         <img src="images/profile.jpg" alt="Hello, my name is Chimamkpam Nnaji" width="200">
@@ -26,7 +29,7 @@
             writing codes and playing soccer. I am currently studying Web Design
             and Development at BYU Pathway. My favorite snack is taco. I also love making music
             with my guitar. I have three close friends and every weekend we meet and hangout. This
-            weekend, we went to the calabar annual street carnival. It is the biggest street
+            weekend, we went to the Calabar annual street carnival. It is the biggest street
             carnival in West Africa.
         </p>
         <ul class="box indent">
@@ -40,7 +43,7 @@
     </main>
     <aside class="box">
         <h2>Enugu</h2>
-        <img src="images/enugu.jpg" alt="Enugu landscape">
+        <img src="images/enugu1.jpg" alt="Enugu landscape">
         <p>
             Enugu is a state in eastern Nigeria. It is bordered by Kogi and Benue to
             the North, Abia and Imo to the south, Ebonyi to the east and Anambra to
@@ -54,6 +57,7 @@
             to give the thrill of city life.
         </p>
     </aside>
+    </div>
     <footer>
         <p>©2026 🌴 Chima Nnaji 🌴 Enugu, Nigeria</p>
     </footer>
