--- a/wwr/about.html
+++ b/wwr/about.html
@@ -6,15 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Open Waters</title>
     <meta name="description"
-      content="Experience the thrill of rafting in Nigeria! Join us for an unforgettable adventure on water. Book now!">
+        content="Learn about Open Waters, Nigeria's rafting company since 2010. Discover our devotion to thrilling adventures, skilled guides, and safety on wild waters.">
     <meta name="author" content="Chimamkpam Nnaji">
     <link rel="stylesheet" href="styles/rafting.css">
 </head>
 
 <body>
     <header>
-        <img src="images/z-boat.png" alt="Open Waters logo">
-        <p>OPEN WATERS</p>
+        <img src="images/openwaters-logo.webp" alt="Open Waters logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -28,24 +27,59 @@
 
     <main>
         <div class="hero">
-            <img src="images/rafting16-1024-1.jpg" alt="Adventure seekers on the flow.">
+            <img src="images/rafting16.webp" alt="Adventure seekers on the flow.">
             <h1>OPEN WATERS</h1>
             <article>
                 <h2 class="visually-hidden">Experience Open Waters rafting</h2>
-                <img src="images/rafting4_600.jpg" alt="Our client enjoying the adventure.">
+                <img src="images/rafting4.webp" alt="Our client enjoying the adventure.">
                 <p>Ready to conquer wild waters? At Open Waters, we craft unforgettable rafting
                     adventures that thrill, excite, and connect you with nature, while our trained
                     and experienced lifeguards ensure your safety. Join the flow!</p>
             </article>
         </div>
-        <section>
+        <section class="history">
             <h2>History</h2>
-            <p>Open Waters began with a splash in 2010, evolving into the ultimate rafting crew.
-                We've created legends, and still chase the wild flow 🌊
-            </p>
+            <div class="grid">
+                <p>Open Waters began with a splash in 2010, evolving into the ultimate rafting crew.
+                    We've created legends, and still chase the wild flow.
+                    In our first year, we only served 50 adventurers, but words of our exceptional service
+                    reached out to great adventurers seeking for a wild, passionate and exciting outdoor adventure.
+                </p>
+                <img src="images/rafting20.webp" alt="Rafting paddles">
+                <p>Over the decade, we've successfully guided more than 10,000 rafters through unforgettable
+                    rafting expeditions. We've weathered challenges, celebrated milestones and, continuosly improved
+                    our services. From humble beginnings to becoming recognized in adventure tourism,
+                    our passion for rivers remains stong.</p>
+            </div>
         </section>
-        <section>
+        <section class="adventures">
             <h2>Adventure Awaits You!</h2>
+            <div class="adventures-grid">
+                <figure>
+                    <img src="images/rafting60.webp" alt="Abuja rafters on a thrilling adventure.">
+                    <figcaption>Abuja deep waters tour</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting36.webp" alt="Rafters roughing the Niger River.">
+                    <figcaption>Niger River discovery tour</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting47.webp" alt="Rafters on the wild Lagos Beach adventure.">
+                    <figcaption>Lagos Beach wild rafting</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/premium-photo.jpeg" alt="Smiling rafter on a small raft.">
+                    <figcaption>Spar Beach shallows</figcaption>
+                </figure>
+
+                <figure>
+                    <img src="images/rafting42.webp" alt="Rafters on a wild thrilling aventure on the Azumili River">
+                    <figcaption>Azumili wild river tour</figcaption>
+                </figure>
+            </div>
         </section>
 
     </main>
@@ -54,10 +88,8 @@
         <p>©2026 | OPEN WATERS | Chimamkpam Nnaji</p>
         <nav class="socialmedia">
             <a href="https://www.facebook.com"><img src="images/images.jpg" alt="Facebook logo"></a>
-            <a href="https://www.instagram.com"><img src="images/images-1.jpg"
-                  alt="Instagram logo"></a>
-            <a href="https://www.twitter.com"><img src="images/download-3.png"
-                  alt="Twitter logo"></a>
+            <a href="https://www.instagram.com"><img src="images/images-1.jpg" alt="Instagram logo"></a>
+            <a href="https://www.twitter.com"><img src="images/download-3.png" alt="Twitter logo"></a>
         </nav>
 
     </footer>
