--- a/wwr/about.html
+++ b/wwr/about.html
@@ -76,7 +76,7 @@
                 </figure>
 
                 <figure>
-                    <img src="images/rafting42.webp" alt="Rafters on a wild thrilling aventure on the Azumili River">
+                    <img src="images/rafting42.webp" alt="Rafters on a wild thrilling aventure on the Azumili River.">
                     <figcaption>Azumili wild river tour</figcaption>
                 </figure>
             </div>
