Update contact.html and rafting .css

--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -51,13 +51,13 @@
 
                             <span>Message<br>Purpose</span><br>
                             <div>
-                                <input type="radio" id="inquiry" name="inquiry">
+                                <input type="radio" id="inquiry" name="purpose">
                                 <label for="inquiry">General Inquiry</label><br>
 
-                                <input type="radio" id="reservation" name="reservation">
+                                <input type="radio" id="reservation" name="purpose">
                                 <label for="reservation"> Reservation Question</label><br>
 
-                                <input type="radio" id="suggestion" name="suggestion">
+                                <input type="radio" id="suggestion" name="purpose">
                                 <label for="suggestion"> Website Suggestion</label><br>
                             </div>
                         </div>
