Add initial website structure and content for Open Waters Rafting Company
- Created index.html with header, main content, and footer sections.
- Added trips.html detailing various rafting trips and experiences.
- Included images and descriptions for each trip.
- Introduced a newsletter subscription form in the history section.
- Added social media links in the footer.
- Included SVG and PNG images for branding and social media icons.

--- a/wwr/about.html
+++ b/wwr/about.html
@@ -9,6 +9,7 @@
       content="Learn about Open Waters, Nigeria's rafting company since 2010. Discover our devotion to thrilling adventures, skilled guides, and safety on wild waters.">
     <meta name="author" content="Chimamkpam Nnaji">
     <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="icon" href="images/openwaters-logo.webp">
 </head>
 
 <body>
@@ -87,9 +88,9 @@
     <footer>
         <p>©2026 | OPEN WATERS | Chimamkpam Nnaji</p>
         <nav class="socialmedia">
-            <a href="https://www.facebook.com"><img src="images/images.jpg" alt="Facebook logo"></a>
-            <a href="https://www.instagram.com"><img src="images/images-1.jpg" alt="Instagram logo"></a>
-            <a href="https://www.twitter.com"><img src="images/download-3.png" alt="Twitter logo"></a>
+            <a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook logo"></a>
+            <a href="https://www.instagram.com"><img src="images/instagram-square.svg" alt="Instagram logo"></a>
+            <a href="https://www.youtube.com"><img src="images/youtube.png" alt="Youtube logo"></a>
         </nav>
 
     </footer>
