--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -9,6 +9,7 @@
         content="Contact Open Waters for rafting bookings and trip inquiries. Call, Email or visit us to plan your next thrilling water adventure!">
     <meta name="author" content="Chimamkpam Nnaji">
     <link rel="stylesheet" href="styles/rafting.css">
+    <link rel="icon" href="images/openwaters-logo.webp">
 </head>
 
 <body>
@@ -80,7 +81,7 @@
             <h2>We Are Here To Serve You</h2>
             <div class="adventures-grid employees">
                 <figure>
-                    <img src="images/employee1.webp" alt="Open Waters employee">
+                <img src="images/employee1.webp" alt="Open Waters employee">
                     <figcaption>Jason Lewandoski<span>Rafting Instructor</span></figcaption>
 
                 </figure>
@@ -106,9 +107,9 @@
     <footer>
         <p>©2026 | OPEN WATERS | Chimamkpam Nnaji</p>
         <nav class="socialmedia">
-            <a href="https://www.facebook.com"><img src="images/images.jpg" alt="Facebook logo"></a>
-            <a href="https://www.instagram.com"><img src="images/images-1.jpg" alt="Instagram logo"></a>
-            <a href="https://www.twitter.com"><img src="images/download-3.png" alt="Twitter logo"></a>
+            <a href="https://www.facebook.com"><img src="images/facebook.png" alt="Facebook logo"></a>
+            <a href="https://www.instagram.com"><img src="images/instagram-square.svg" alt="Instagram logo"></a>
+            <a href="https://www.youtube.com"><img src="images/youtube.png" alt="Youtube logo"></a>
         </nav>
 
     </footer>
